--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "npm-create-vite-latest",
+  "name": "vite-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
 }
